HHH-20375 - Prepare for JPA 4.0 M2 development
Address compilation errors with JpaCriteriaQuery and friends

Signed-off-by: Steve Ebersole <steve@hibernate.org>